--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
                         <img alt="portait" id="headshot" class="clearfix animated z-depth-4" src="./assets/images/headshot2.jpg" />
                     </div>
                     <div class="col s12 m7 l6">
-                        <p id="bioP" class="z-depth-4 animated">Hi, I'm Chris, and I'm a full stack web-developer. I completed the full-stack web development bootcamp
+                        <p id="bioP" class="z-depth-4 animated">Hi, I'm Chris, and I'm a full stack web developer who completed the full-stack Javascript development program
                             with the University of Denver. I started my coding journey on <a class="link" href="http://www.codecademy.com">codecademy</a> and continued
                             with courses through the University of Michigan online (via Coursera) in Javascript and Responsive
-                            Design. I have since become familiar with many popular libraries and frameworks, both front and
+                            Design. <br/> have since become familiar with many popular libraries and frameworks, both front and
                             back end. I've been interested in tech as a hobby for my entire adult life. When I'm not coding, I'm an avid gamer and
                             love photography and travel. You'll see a few of my website projects on my portfolio page and feel
                             free to reach out to me for custom work or questions. Thanks!
@@ -144,7 +144,6 @@
             </div>
         </div>
     </footer>
-
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
