--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <p id="bioP" class="z-depth-4 animated">Hi, I'm Chris, and I'm a full stack web developer who completed the full-stack Javascript development program
                             with the University of Denver. I started my coding journey on <a class="link" href="http://www.codecademy.com">codecademy</a> and continued
                             with courses through the University of Michigan online (via Coursera) in Javascript and Responsive
-                            Design. <br/> have since become familiar with many popular libraries and frameworks, both front and
+                            Design. <br/>I have since become familiar with many popular libraries and frameworks, both front and
                             back end. I've been interested in tech as a hobby for my entire adult life. When I'm not coding, I'm an avid gamer and
                             love photography and travel. You'll see a few of my website projects on my portfolio page and feel
                             free to reach out to me for custom work or questions. Thanks!
