added new projects

--- a/index.html
+++ b/index.html
@@ -83,13 +83,17 @@
                         <img alt="portait" id="headshot" class="clearfix animated z-depth-4" src="./assets/images/headshot2.jpg" />
                     </div>
                     <div class="col s12 m7 l6">
-                        <p id="bioP" class="z-depth-4 animated">Hi, I'm Chris, and I'm a full stack web developer who completed the full-stack Javascript development program
-                            with the University of Denver. I started my coding journey on <a class="link" href="http://www.codecademy.com">codecademy</a> and continued
-                            with courses through the University of Michigan online (via Coursera) in Javascript and Responsive
-                            Design. <br/>I have since become familiar with many popular libraries and frameworks, both front and
-                            back end. I've been interested in tech as a hobby for my entire adult life. When I'm not coding, I'm an avid gamer and
-                            love photography and travel. You'll see a few of my website projects on my portfolio page and feel
-                            free to reach out to me for custom work or questions. Thanks!
+                        <p id="bioP" class="z-depth-4 animated">Hi, I'm Chris, and I'm a full stack web developer who
+                            completed the full-stack Javascript development program
+                            with the University of Denver. I started my coding journey because of my love of all things
+                            technology, and I've since become enamored with the process of coding and problem solving.
+                            I love to offer my skills to help people solve problems, and I love to build things from
+                            scratch.
+                            <br />I have familiarized myself withmany popular libraries and frameworks, both front and
+                            back end. I've been interested in tech as a hobby for my entire adult life. When I'm not
+                            coding, I'm an avid gamer and
+                            love photography and travel. You'll see a few of my website projects on my portfolio page
+                            and feel free to reach out to me for custom work or questions. Thanks!
                         </p>
                     </div>
                 </div>
@@ -110,6 +114,8 @@
                         <img src="assets/images/mysql.png">mySQL/Sequelize</a>
                     <a class="carousel-item">
                         <img src="assets/images/node_logo.png">node.js with Express</a>
+                    <a class="carousel-item">
+                        <img src="assets/images/grid.png">CSS Grid</a>
                     <a class="carousel-item">
                         <img src="assets/images/jquery.png">jQuery</a>
                     <a class="carousel-item">
@@ -143,6 +149,7 @@
                 © 2018 Christopher Etges
             </div>
         </div>
+
     </footer>
 
 
