--- a/portfolio.html
+++ b/portfolio.html
@@ -53,6 +53,127 @@
                 <!-- Projects I've completed -->
                 <h4 class="center teal-text">click on card images for details</h4>
                 <br>
+                <div id="proj15" class="card animated col s10 m5 l5">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator z-depth-5" src="assets/images/volunteer.png">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Such Good Helpers (In Development)</span>
+                        <i class="material-icons right">more_vert</i>
+                        </span>
+                        <p>
+                            <a target="_blank" href="https://github.com/cetges86/volunteer-app">Github Link</a>
+                        </p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Such Good Helpers/Volunteer Application
+                            <i class="material-icons right">close</i>
+                        </span>
+                        <p>Online Portal where teachers can ask for volunteer help from parents by posting a request (In Development)
+                            <br>
+                            Expected to be completed by end of 2018
+                        </p>
+                        <ul>
+                            <span id="heading">Technologies Used:</span>
+                            <li>Front End Built with React</li>
+                            <li>User authentication with Passport.js</li>
+                            <li>Custom CSS Grid Framework</li>
+                            <li>Axios for API calls/routing</li>
+                            <li>Express/Node Server back end</li>
+                            <li>MongoDB/Mongoose Database</li>
+                        </ul>
+                        <a href="https://github.com/cetges86/volunteer-app">Github Repo</a>
+                    </div>
+                </div>
+                <div id="proj16" class="card animated col s10 m5 offset-m2 l5 offset-l2">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="assets/images/kylesite.png">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Kyle Etges.com</span>
+                        <i class="material-icons right">more_vert</i>
+                        </span>
+                        <p>
+                            <a target="_blank" href="https://kyle-etges.herokuapp.com/">Project Link</a>
+                        </p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Kyle Etges.com
+                            <i class="material-icons right">close</i>
+                        </span>
+                        <p>Personal website built for my brother, Kyle Etges, a musician in TN. Check him out!
+                            <br>
+                            Still finalizing domain, and mobile responsiveness
+                        </p>
+                        <ul>
+                            <span id="heading">Technologies Used:</span>
+                            <li>HTML5/CSS Grid</li>
+                            <li>Front End built on React</li>
+                            <li>Express.js</li>
+                            <li>Custom CSS Framework</li>
+                        </ul>
+                        <a href="https://github.com/cetges86/kyle_etges">Github Repo</a>
+                    </div>
+                </div>
+                <div id="proj17" class="card animated col s10 m5 l5">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator z-depth-5" src="assets/images/trails.jpg">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">TrailsOffRoad.com Email Templates</span>
+                        <i class="material-icons right">more_vert</i>
+                        </span>
+                        <p>
+                            <a target="_blank" href="http://www.trailsoffroad.com">Site Link</a>
+                        </p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Created new email templates for trailsoffroad.com
+                            <i class="material-icons right">close</i>
+                        </span>
+                        <p>Html Templates using xhtml and table-based templates for multiple mail clients
+                            <br>
+                            Sign up for TrailsOffRoad.com to see it in action! :)
+                        </p>
+                        <ul>
+                            <span id="heading">Technologies Used:</span>
+                            <li>HTML for email clients</li>
+                            <li>CSS</li>
+                            <li>Table-based layout</li>
+                        </ul>
+                        <p>No Github Repo</p>
+                    </div>
+                </div>
+                <div id="proj18" class="card animated col s10 m5 offset-m2 l5 offset-l2">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="assets/images/aarp.png">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">AARP Calculator</span>
+                        <i class="material-icons right">more_vert</i>
+                        </span>
+                        <p>
+                            <a target="_blank" href="https://cetges86.github.io/aarp-calculator/">Project Link</a>
+                        </p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">AARP Discount Calculator
+                            <i class="material-icons right">close</i>
+                        </span>
+                        <p>Simple tool built for my company, Vision Care Specialists, to calculate AARP Discount values for opticians
+                            <br>
+                            Still in development
+                        </p>
+                        <ul>
+                            <span id="heading">Technologies Used:</span>
+                            <li>HTML5/CSS Grid</li>
+                            <li>Materialize.css</li>
+                            <li>Javascript & jQuery</li>
+
+                        </ul>
+                        <a href="https://github.com/cetges86/aarp-calculator">Github Repo</a>
+                    </div>
+                </div>
                 <div id="proj14" class="card animated col s10 m5 l5">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator z-depth-5" src="assets/images/yearbook.png">
