fix layout issue portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
                         <img class="activator z-depth-5" src="assets/images/volunteer.png">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Such Good Helpers (In Development)</span>
+                        <span class="card-title activator grey-text text-darken-4">Such Good Helpers</span>
                         <i class="material-icons right">more_vert</i>
                         </span>
                         <p>
@@ -66,7 +66,7 @@
                         </p>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Such Good Helpers/Volunteer Application
+                        <span class="card-title grey-text text-darken-4">Such Good Helpers/Volunteer Application (In Development)
                             <i class="material-icons right">close</i>
                         </span>
                         <p>Online Portal where teachers can ask for volunteer help from parents by posting a request (In Development)
@@ -120,7 +120,7 @@
                         <img class="activator z-depth-5" src="assets/images/trails.jpg">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">TrailsOffRoad.com Email Templates</span>
+                        <span class="card-title activator grey-text text-darken-4">TrailsOffRoad.com HTML Email</span>
                         <i class="material-icons right">more_vert</i>
                         </span>
                         <p>
