--- a/portfolio.html
+++ b/portfolio.html
@@ -395,7 +395,7 @@
                         <i class="material-icons right">more_vert</i>
                         </span>
                         <p>
-                            <a target="_blank" href="http://www.trukeep.com">Project Link</a>
+                            <a target="_blank" href="http://www.trukeep.com">Project Link (Shut Down as of 12/11)</a>
                         </p>
                     </div>
                     <div class="card-reveal">
