--- a/portfolio.html
+++ b/portfolio.html
@@ -85,7 +85,7 @@
                         <a href="https://github.com/cetges86/volunteer-app">Github Repo</a>
                     </div>
                 </div>
-                <div id="proj16" class="card animated col s10 m5 offset-m2 l5 offset-l2">
+                <div id="proj16" class="card animated col s10 m5 offset-m1 l5 offset-l2">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="assets/images/kylesite.png">
                     </div>
@@ -120,7 +120,7 @@
                         <img class="activator z-depth-5" src="assets/images/trails.jpg">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">TrailsOffRoad.com HTML Email</span>
+                        <span class="card-title activator grey-text text-darken-4">TrailsOffRoad.com Email</span>
                         <i class="material-icons right">more_vert</i>
                         </span>
                         <p>
@@ -144,7 +144,7 @@
                         <p>No Github Repo</p>
                     </div>
                 </div>
-                <div id="proj18" class="card animated col s10 m5 offset-m2 l5 offset-l2">
+                <div id="proj18" class="card animated col s10 m5 offset-m1 l5 offset-l2">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="assets/images/aarp.png">
                     </div>
@@ -206,7 +206,7 @@
                         <a href="https://github.com/cetges86/aviato-project-3">Github Repo</a>
                     </div>
                 </div>
-                <div id="proj11" class="card animated col s10 m5 offset-m2 l5 offset-l2">
+                <div id="proj11" class="card animated col s10 m5 offset-m1 l5 offset-l2">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="assets/images/food.jpeg">
                     </div>
@@ -266,7 +266,7 @@
                         <a href="https://github.com/cetges86/react-memory-game">Github Repo</a>
                     </div>
                 </div>
-                <div id="proj1" class="card animated col s10 m5 offset-m2 l5 offset-l2">
+                <div id="proj1" class="card animated col s10 m5 offset-m1 l5 offset-l2">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator z-depth-5" src="assets/images/niteowl.png">
                     </div>
@@ -328,7 +328,7 @@
                         <a href="https://github.com/cetges86/vidja-game-scraper">Github Repo</a>
                     </div>
                 </div>
-                <div id="proj2" class="card animated col s10 m5 offset-m2 l5 offset-l2">
+                <div id="proj2" class="card animated col s10 m5 offset-m1 l5 offset-l2">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="assets/images/friend-finder.png">
                     </div>
@@ -386,7 +386,7 @@
                         <a href="https://github.com/cetges86/CEtges-Photo">Github Repo</a>
                     </div>
                 </div>
-                <div id="proj4" class="card animated col s10 m5 offset-m2 l5 offset-l2">
+                <div id="proj4" class="card animated col s10 m5 offset-m1 l5 offset-l2">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="assets/images/trukeepicon.jpeg">
                     </div>
@@ -444,7 +444,7 @@
                         <a href="https://github.com/cetges86/TriviaGame">Github Repo</a>
                     </div>
                 </div>
-                <div id="proj6" class="card animated col s10 m5 offset-m2 l5 offset-l2">
+                <div id="proj6" class="card animated col s10 m5 offset-m1 l5 offset-l2">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="assets/images/hangman.png">
                     </div>
@@ -504,7 +504,7 @@
                         <a href="https://github.com/cetges86/burger">Github Repo</a>
                     </div>
                 </div>
-                <div id="proj7" class="card animated col s10 m5 offset-m2 l5 offset-l2">
+                <div id="proj7" class="card animated col s10 m5 offset-m1 l5 offset-l2">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="assets/images/cat.gif">
                     </div>
