--- a/portfolio.html
+++ b/portfolio.html
@@ -90,11 +90,11 @@
                         <img class="activator" src="assets/images/kylesite.png">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Kyle Etges.com</span>
+                        <span class="card-title activator grey-text text-darken-4">Etgesmusic.com</span>
                         <i class="material-icons right">more_vert</i>
                         </span>
                         <p>
-                            <a target="_blank" href="https://kyle-etges.herokuapp.com/">Project Link</a>
+                            <a target="_blank" href="https://etgesmusic.com/">Project Link</a>
                         </p>
                     </div>
                     <div class="card-reveal">
