--- a/portfolio.html
+++ b/portfolio.html
@@ -66,12 +66,14 @@
                         </p>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Such Good Helpers/Volunteer Application (In Development)
+                        <span class="card-title grey-text text-darken-4">Such Good Helpers/Volunteer Application (In
+                            Development)
                             <i class="material-icons right">close</i>
                         </span>
-                        <p>Online Portal where teachers can ask for volunteer help from parents by posting a request (In Development)
+                        <p>Online Portal where teachers can ask for volunteer help from parents by posting a request (In
+                            Development)
                             <br>
-                            Expected to be completed by end of 2018
+                            Expected to be completed by Spring 2019
                         </p>
                         <ul>
                             <span id="heading">Technologies Used:</span>
@@ -103,7 +105,7 @@
                         </span>
                         <p>Personal website built for my brother, Kyle Etges, a musician in TN. Check him out!
                             <br>
-                            Still finalizing domain, and mobile responsiveness
+                            Still working on tablet level responsiveness
                         </p>
                         <ul>
                             <span id="heading">Technologies Used:</span>
@@ -113,65 +115,6 @@
                             <li>Custom CSS Framework</li>
                         </ul>
                         <a href="https://github.com/cetges86/kyle_etges">Github Repo</a>
-                    </div>
-                </div>
-                <div id="proj17" class="card animated col s10 m5 l5">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator z-depth-5" src="assets/images/trails.jpg">
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">TrailsOffRoad.com Email</span>
-                        <i class="material-icons right">more_vert</i>
-                        </span>
-                        <p>
-                            <a target="_blank" href="http://www.trailsoffroad.com">Site Link</a>
-                        </p>
-                    </div>
-                    <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Created new email templates for trailsoffroad.com
-                            <i class="material-icons right">close</i>
-                        </span>
-                        <p>Html Templates using xhtml and table-based templates for multiple mail clients
-                            <br>
-                            Sign up for TrailsOffRoad.com to see it in action! :)
-                        </p>
-                        <ul>
-                            <span id="heading">Technologies Used:</span>
-                            <li>HTML for email clients</li>
-                            <li>CSS</li>
-                            <li>Table-based layout</li>
-                        </ul>
-                        <p>No Github Repo</p>
-                    </div>
-                </div>
-                <div id="proj18" class="card animated col s10 m5 offset-m1 l5 offset-l2">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="assets/images/aarp.png">
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">AARP Calculator</span>
-                        <i class="material-icons right">more_vert</i>
-                        </span>
-                        <p>
-                            <a target="_blank" href="https://cetges86.github.io/aarp-calculator/">Project Link</a>
-                        </p>
-                    </div>
-                    <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">AARP Discount Calculator
-                            <i class="material-icons right">close</i>
-                        </span>
-                        <p>Simple tool built for my company, Vision Care Specialists, to calculate AARP Discount values for opticians
-                            <br>
-                            Still in development
-                        </p>
-                        <ul>
-                            <span id="heading">Technologies Used:</span>
-                            <li>HTML5/CSS Grid</li>
-                            <li>Materialize.css</li>
-                            <li>Javascript & jQuery</li>
-
-                        </ul>
-                        <a href="https://github.com/cetges86/aarp-calculator">Github Repo</a>
                     </div>
                 </div>
                 <div id="proj14" class="card animated col s10 m5 l5">
@@ -206,6 +149,70 @@
                         <a href="https://github.com/cetges86/aviato-project-3">Github Repo</a>
                     </div>
                 </div>
+
+                <div id="proj18" class="card animated col s10 m5 offset-m1 l5 offset-l2">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="assets/images/aarp.png">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">AARP Calculator</span>
+                        <i class="material-icons right">more_vert</i>
+                        </span>
+                        <p>
+                            <a target="_blank" href="https://vcs-aarp.netlify.com">Project Link</a>
+                        </p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">AARP Discount Calculator
+                            <i class="material-icons right">close</i>
+                        </span>
+                        <p>Web Tool built for my company, Vision Care Specialists, to correctly calculate AARP Discount
+                            for opticians.
+                            <br>
+                            v1.0 just released!
+                        </p>
+                        <ul>
+                            <span id="heading">Technologies Used:</span>
+                            <li>HTML5/CSS Grid</li>
+                            <li>Materialize.css</li>
+                            <li>Javascript & jQuery</li>
+
+                        </ul>
+                        <a href="https://github.com/cetges86/aarp-calculator">Github Repo</a>
+                    </div>
+                </div>
+
+                <div id="proj17" class="card animated col s10 m5 l5">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator z-depth-5" src="assets/images/trails.jpg">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">TrailsOffRoad.com Email</span>
+                        <i class="material-icons right">more_vert</i>
+                        </span>
+                        <p>
+                            <a target="_blank" href="http://www.trailsoffroad.com">Site Link</a>
+                        </p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Created new email templates for
+                            trailsoffroad.com
+                            <i class="material-icons right">close</i>
+                        </span>
+                        <p>Html Templates using xhtml and table-based templates for multiple mail clients
+                            <br>
+                            Sign up for TrailsOffRoad.com to see it in action! :)
+                        </p>
+                        <ul>
+                            <span id="heading">Technologies Used:</span>
+                            <li>HTML for email clients</li>
+                            <li>CSS</li>
+                            <li>Table-based layout</li>
+                        </ul>
+                        <p>No Github Repo</p>
+                    </div>
+                </div>
+
                 <div id="proj11" class="card animated col s10 m5 offset-m1 l5 offset-l2">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="assets/images/food.jpeg">
@@ -549,7 +556,8 @@
                         <span class="card-title grey-text text-darken-4">LIRI Node Application
                             <i class="material-icons right">close</i>
                         </span>
-                        <p>Node CLI Application that can display tweets, search Spotify for songs, or omdb for Movie information
+                        <p>Node CLI Application that can display tweets, search Spotify for songs, or omdb for Movie
+                            information
                             <br>
                         </p>
                         <ul>
@@ -597,14 +605,14 @@
                     </div> -->
             </div>
             <section id="projects-Project Link">
-                    <div class="container">
-                        <div class="center-align">
-                            <a href="contact.html" class="waves-effect waves-light btn-large animated">
-                                <i class="material-icons right">email</i>Get In Touch</a>
-                        </div>
-        
+                <div class="container">
+                    <div class="center-align">
+                        <a href="contact.html" class="waves-effect waves-light btn-large animated">
+                            <i class="material-icons right">email</i>Get In Touch</a>
                     </div>
-                </section>
+
+                </div>
+            </section>
         </div>
 
     </main>
@@ -617,9 +625,9 @@
             </div>
         </div>
     </footer>
-    
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous"></script>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="assets/js/materialize.min.js"></script>
     <script src="assets/js/jquery.waypoints.js"></script>
     <script src="assets/js/script.js"></script>
