--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="row">
                 <div id="bio-container" class="container valign-wrapper">
                     <div class="col s12 m5 l6">
-                        <img alt="portait" id="headshot" class="clearfix animated z-depth-4" src="./assets/images/headshot2.jpg" />
+                        <img alt="portait" id="headshot" class="clearfix animated z-depth-4" src="./assets/images/headshot.jpg" />
                     </div>
                     <div class="col s12 m7 l6">
                         <p id="bioP" class="z-depth-4 animated">Hi, I'm Chris, and I'm a full stack web developer who
@@ -91,8 +91,7 @@
                             scratch.
                             <br />I have familiarized myself with many popular libraries and frameworks, both front and
                             back end. I've been interested in tech as a hobby for my entire adult life. When I'm not
-                            coding, I'm an avid gamer and
-                            love photography and travel. You'll see a few of my website projects on my portfolio page
+                            coding, I love photography, travel and taking trips into the mountains. You'll see a few of my website projects on my portfolio page
                             and feel free to reach out to me for custom work or questions. Thanks!
                         </p>
                     </div>
