fix images, update resume

--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
                 <button class="btn-large waves-effect waves-light disabled contact-btn">
                     <i class="material-icons left">local_phone</i>Call Me - (303)518.2933
                 </button>
-                <a href="./assets/files/ChrisEtgesResume3.20.pdf" download class="btn-large waves-effect waves-light contact-btn">
+                <a href="./assets/files/ChrisEtgesResume2019.pdf" download class="btn-large waves-effect waves-light contact-btn">
                     <i class="material-icons left">file_download</i>Resume
                 </a>
 
