--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
                 <br>
                 <div id="proj15" class="card animated col s10 m5 l5">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator z-depth-5" src="assets/images/volunteer.png">
+                        <img class="activator z-depth-5" src="assets/images/volunteer-screenshot.png">
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Such Good Helpers</span>
@@ -119,7 +119,7 @@
                 </div>
                 <div id="proj14" class="card animated col s10 m5 l5">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator z-depth-5" src="assets/images/yearbook.png">
+                        <img class="activator z-depth-5" src="assets/images/yearbook-screenshot.png">
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">yearbook()</span>
