--- a/portfolio.html
+++ b/portfolio.html
@@ -62,18 +62,14 @@
                         <i class="material-icons right">more_vert</i>
                         </span>
                         <p>
-                            <a target="_blank" href="https://github.com/cetges86/volunteer-app">Github Link</a>
+                            <a target="_blank" href="https://good-helpers.herokuapp.com/">Project Link</a>
                         </p>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Such Good Helpers/Volunteer Application (In
-                            Development)
+                        <span class="card-title grey-text text-darken-4">Such Good Helpers/Volunteer Application 
                             <i class="material-icons right">close</i>
                         </span>
-                        <p>Online Portal where teachers can ask for volunteer help from parents by posting a request (In
-                            Development)
-                            <br>
-                            Expected to be completed by Spring 2019
+                        <p>Online Portal where teachers can ask for volunteer help from parents by posting a request
                         </p>
                         <ul>
                             <span id="heading">Technologies Used:</span>
